# Copy-DSO-HSE-25

./: .env.example  .gitignore  .gitleaks.toml  .hadolint.yaml  .pre-commit-config.yaml  .trivyignore  .zapignore  Dockerfile  README.md  SECURITY.md  alembic.ini  compose.yaml  docker-entrypoint.sh  healthcheck.py  pyproject.toml  pytest.ini  requirements.txt  waivers.yml
.github/: CODEOWNERS
.github/workflows/: ci-dast.yml  ci-sast-secrets.yml  ci-sast.yml  ci-sbom-sca.yml  ci.yml
app/: main.py
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md
docs/security-nfr/: NFR.md  NFR_BDD.md  NFR_TRACEABILITY.md
docs/threat-model/: DFD.md  RISKS.md  STRIDE.md
scripts/: generate_sast_summary.py  generate_sca_summary.py  generate_zap_summary.py
security/semgrep/: rules.yml
src/: board_status.py  config.py
src/adapters/: db_work_unit.py  local_storages.py  logger.py
src/app/: di_frame.py  main.py  routers.py  storage_setup.py
src/domain/: constants.py  exceptions.py  idea.py  repositories.py  vote.py  vote_board.py
src/exceptions/: base.py  board.py  vote.py
src/middleware/: cors_policy.py  ratelimits.py
src/migrations/: env.py
src/models/: base.py  board.py  vote.py
src/repositories/: board_repo.py  idea_repo.py  user_repo.py  vote_repo.py
src/routers/: boards.py  ideas.py  users.py  votes.py
src/schemas/: board.py  idea.py  user.py
tests/: conftest.py  test_boards.py  test_cors.py  test_errors.py  test_health.py  test_ideas.py  test_limits.py  test_nfr.py  test_non_root_docker.sh  test_rfc7807.py  test_users.py  test_votes.py
(+18 files in other folders)
